--- a/#src/index.html
+++ b/#src/index.html
@@ -176,7 +176,7 @@
                     </div>
                     <div class="story-section__navigation">
                         <a href="#" class="btn-outline read-more">Citeste mai mult</a>
-                        <a href="#" class="btn-accent write-story">Spune-ne povestea ta</a>
+                        <button class="btn-accent write-story">Spune-ne povestea ta</button>
                     </div>
                 </div>
             </div>
@@ -275,6 +275,8 @@
                 </div>
             </div>
         </section>
+
+        @@include('components/popup.html')
     </main>
 
     @@include('components/footer.html')
