--- a/Qubo/recomandation.html
+++ b/Qubo/recomandation.html
@@ -38,10 +38,10 @@
                     <a href="../specialisti.html" class="header-navbar__link">Specialiști</a>
                 </li>
                 <li class="header-navbar__item">
-                    <a href="#" class="header-navbar__link">Istorii</a>
+                    <a href="../story.html" class="header-navbar__link">Istorii</a>
                 </li>
                 <li class="header-navbar__item">
-                    <a href="#" class="header-navbar__link">Resurse</a>
+                    <a href="../resources.html" class="header-navbar__link">Resurse</a>
                 </li>
             </ul>
         </nav>
@@ -55,7 +55,147 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
     </div>
 </div>
+        <div class="recomandation">
+            <div class="container">
+                <div class="recomandation-main">
+                    <img src="img/main-post.jpg" alt="Ce să faci când ai un atac de panică">
+                    <div class="recomandation-main__information">
+                        <h4>Ce să faci când ai un atac de panică</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequatLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
+                        </p>
+                        <a href="#" class="btn-accent">Citeste mai mult</a>
+                    </div>
+                </div>
 
+                <div class="recomandation-body">
+                    <div class="block-header">
+                        <h3>Recomandări despre cum să interacționați mai bine cu oamenii</h3>
+                        <a href="#" class="btn-outline">
+                            Vezi toate recomadari
+                        </a>
+                    </div>
+                    <div class="recomandation-body__grid">
+                        <div class="recomandation-grid__item">
+                            <a href="#">
+                                <img src="img/rec1.jpg" alt="Recomandări despre cum să interacționați mai bine cu oamenii">
+                            </a>
+                            <h6>Recomandări despre cum să interacționați mai bine cu oamenii</h6>
+                        </div>
+                        <div class="recomandation-grid__item">
+                            <a href="#">
+                                <img src="img/rec2.jpg" alt="Recomandări despre cum să interacționați mai bine cu oamenii">
+                            </a>
+                            <h6>Recomandări despre cum să interacționați mai bine cu oamenii</h6>
+                        </div>
+                        <div class="recomandation-grid__item">
+                            <a href="#">
+                                <img src="img/rec3.jpg" alt="Recomandări despre cum să interacționați mai bine cu oamenii">
+                            </a>
+                            <h6>Recomandări despre cum să interacționați mai bine cu oamenii</h6>
+                        </div>
+                        <div class="recomandation-grid__item">
+                            <a href="#">
+                                <img src="img/rec4.jpg" alt="Recomandări despre cum să interacționați mai bine cu oamenii">
+                            </a>
+                            <h6>Recomandări despre cum să interacționați mai bine cu oamenii</h6>
+                        </div>
+                        <div class="recomandation-grid__item">
+                            <a href="#">
+                                <img src="img/rec5.jpg" alt="Recomandări despre cum să interacționați mai bine cu oamenii">
+                            </a>
+                            <h6>Recomandări despre cum să interacționați mai bine cu oamenii</h6>
+                        </div>
+                        <div class="recomandation-grid__item">
+                            <a href="#">
+                                <img src="img/rec6.jpg" alt="Recomandări despre cum să interacționați mai bine cu oamenii">
+                            </a>
+                            <h6>Recomandări despre cum să interacționați mai bine cu oamenii</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="resources">
+            <div class="container">
+                <div class="block-header">
+                    <h3>Resurse grafice</h3>
+                    <a href="#" class="btn-outline">
+                        Vezi toate resursele
+                    </a>
+                </div>
+                <div class="resources-grid">
+                    <div class="resources-grid__item">
+                        <img src="img/grafic1.jpg" alt="grafic">
+                    </div>
+                    <div class="resources-grid__item">
+                        <img src="img/grafic2.jpg" alt="grafic">
+                    </div>
+                    <div class="resources-grid__item">
+                        <img src="img/grafic3.jpg" alt="grafic">
+                    </div>
+                    <div class="resources-grid__item">
+                        <img src="img/grafic4.jpg" alt="grafic">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="news">
+            <div class="container">
+                <div class="block-header">
+                    <h3>Noutati</h3>
+                    <a href="#" class="btn-outline">
+                        Vezi toate noutatile
+                    </a>
+                </div>
+                <div class="news-grid">
+                    <div class="news-grid__item">
+                        <a href="single.html">
+                            <img src="img/news1.jpg" alt="Workplace Wellness: “I Can’t Let My Boss Find Out”">
+                        </a>
+                        <h6>Workplace Wellness: “I Can’t Let My Boss Find Out”</h6>
+                        <p>For a person living with a mental health condition, the workplace can be a central source of anxiety and stress.All too often working environments...</p>
+                    </div>
+                    <div class="news-grid__item">
+                        <a href="#">
+                            <img src="img/news2.jpg" alt="Workplace Wellness: “I Can’t Let My Boss Find Out”">
+                        </a>
+                        <h6>Workplace Wellness: “I Can’t Let My Boss Find Out”</h6>
+                        <p>For a person living with a mental health condition, the workplace can be a central source of anxiety and stress.All too often working environments...</p>
+                    </div>
+                    <div class="news-grid__item">
+                        <a href="#">
+                            <img src="img/news3.jpg" alt="Workplace Wellness: “I Can’t Let My Boss Find Out”">
+                        </a>
+                        <h6>Workplace Wellness: “I Can’t Let My Boss Find Out”</h6>
+                        <p>For a person living with a mental health condition, the workplace can be a central source of anxiety and stress.All too often working environments...</p>
+                    </div>
+                    <div class="news-grid__item">
+                        <a href="#">
+                            <img src="img/news1.jpg" alt="Workplace Wellness: “I Can’t Let My Boss Find Out”">
+                        </a>
+                        <h6>Workplace Wellness: “I Can’t Let My Boss Find Out”</h6>
+                        <p>For a person living with a mental health condition, the workplace can be a central source of anxiety and stress.All too often working environments...</p>
+                    </div>
+                    <div class="news-grid__item">
+                        <a href="#">
+                            <img src="img/news2.jpg" alt="Workplace Wellness: “I Can’t Let My Boss Find Out”">
+                        </a>
+                        <h6>Workplace Wellness: “I Can’t Let My Boss Find Out”</h6>
+                        <p>For a person living with a mental health condition, the workplace can be a central source of anxiety and stress.All too often working environments...</p>
+                    </div>
+                    <div class="news-grid__item">
+                        <a href="#">
+                            <img src="img/news3.jpg" alt="Workplace Wellness: “I Can’t Let My Boss Find Out”">
+                        </a>
+                        <h6>Workplace Wellness: “I Can’t Let My Boss Find Out”</h6>
+                        <p>For a person living with a mental health condition, the workplace can be a central source of anxiety and stress.All too often working environments...</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer class="footer" style="background: url('img/footer.svg') 50% 50% / cover no-repeat;">
@@ -106,5 +246,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.0.0-alpha.32/swiper-bundle.min.js" integrity="sha512-MD6GpAIaTlkwL/QmIlZiUxTK+Zb6T8sg+5CBaimCCwIIxOAebAVTGy3NUyJgYLVwjasLYMEzNMQpeB9XISr8vA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/script.js"></script>
 </body>
-
+            
 </html>
