--- a/Qubo/specialisti.html
+++ b/Qubo/specialisti.html
@@ -38,10 +38,10 @@
                     <a href="../specialisti.html" class="header-navbar__link">Specialiști</a>
                 </li>
                 <li class="header-navbar__item">
-                    <a href="#" class="header-navbar__link">Istorii</a>
+                    <a href="../story.html" class="header-navbar__link">Istorii</a>
                 </li>
                 <li class="header-navbar__item">
-                    <a href="#" class="header-navbar__link">Resurse</a>
+                    <a href="../resources.html" class="header-navbar__link">Resurse</a>
                 </li>
             </ul>
         </nav>
@@ -88,16 +88,16 @@
 
         <div class="specialisti">
             <div class="container">
-                <div class="specialisti-body">
-                    <div class="specialisti-body__item">
+                <div class="specialisti-body articles">
+                    <div class="articles-body__item">
                         <img src="img/place1.jpg" alt="Spitalul Internaţional „Medpark">
-                        <div class="specialisti-item__content">
+                        <div class="articles-item__content">
                             <h6>Spitalul Internaţional „Medpark</h6>
                             <p>
                                 este primul şi cel mai mare spital multidisciplinar privat din ţară. În cadrul instituției au fost dezvoltate 4 centre de excelenţă care acordă următoarele servicii medicale: ginecologie, pediatrie, chirurgie, ortopedie, vertebrologie, servicii de laborator,
                                 radiologie etc.
                             </p>
-                            <div class="specialisti-item__contacts">
+                            <div class="articles-item__contacts">
                                 <address class="contacts-address">
                                         <span class="icon-location"></span>
                                         <strong>Adresa: </strong>
@@ -111,19 +111,19 @@
                                     <span class="icon-facebook"></span> Pagina de Facebook
                                 </a>
                             </div>
-                            <a href="specialisti-single.html" class="specialisti-item__view btn-accent">Vezi servicii</a>
+                            <a href="specialisti-single.html" class="articles-item__view btn-accent">Vezi servicii</a>
                         </div>
                     </div>
 
-                    <div class="specialisti-body__item">
+                    <div class="articles-body__item">
                         <img src="img/place2.jpg" alt="Spitalul Internaţional „Medpark">
-                        <div class="specialisti-item__content">
+                        <div class="articles-item__content">
                             <h6>Spitalul Internaţional „Medpark</h6>
                             <p>
                                 este primul şi cel mai mare spital multidisciplinar privat din ţară. În cadrul instituției au fost dezvoltate 4 centre de excelenţă care acordă următoarele servicii medicale: ginecologie, pediatrie, chirurgie, ortopedie, vertebrologie, servicii de laborator,
                                 radiologie etc.
                             </p>
-                            <div class="specialisti-item__contacts">
+                            <div class="articles-item__contacts">
                                 <address class="contacts-address">
                                         <span class="icon-location"></span>
                                         <strong>Adresa: </strong>
@@ -137,19 +137,19 @@
                                     <span class="icon-facebook"></span> Pagina de Facebook
                                 </a>
                             </div>
-                            <a href="#" class="specialisti-item__view btn-accent">Vezi servicii</a>
+                            <a href="#" class="articles-item__view btn-accent">Vezi servicii</a>
                         </div>
                     </div>
 
-                    <div class="specialisti-body__item">
+                    <div class="articles-body__item">
                         <img src="img/place3.jpg" alt="Spitalul Internaţional „Medpark">
-                        <div class="specialisti-item__content">
+                        <div class="articles-item__content">
                             <h6>Spitalul Internaţional „Medpark</h6>
                             <p>
                                 este primul şi cel mai mare spital multidisciplinar privat din ţară. În cadrul instituției au fost dezvoltate 4 centre de excelenţă care acordă următoarele servicii medicale: ginecologie, pediatrie, chirurgie, ortopedie, vertebrologie, servicii de laborator,
                                 radiologie etc.
                             </p>
-                            <div class="specialisti-item__contacts">
+                            <div class="articles-item__contacts">
                                 <address class="contacts-address">
                                         <span class="icon-location"></span>
                                         <strong>Adresa: </strong>
@@ -163,19 +163,19 @@
                                     <span class="icon-facebook"></span> Pagina de Facebook
                                 </a>
                             </div>
-                            <a href="#" class="specialisti-item__view btn-accent">Vezi servicii</a>
+                            <a href="#" class="articles-item__view btn-accent">Vezi servicii</a>
                         </div>
                     </div>
 
-                    <div class="specialisti-body__item">
+                    <div class="articles-body__item">
                         <img src="img/place4.jpg" alt="Spitalul Internaţional „Medpark">
-                        <div class="specialisti-item__content">
+                        <div class="articles-item__content">
                             <h6>Spitalul Internaţional „Medpark</h6>
                             <p>
                                 este primul şi cel mai mare spital multidisciplinar privat din ţară. În cadrul instituției au fost dezvoltate 4 centre de excelenţă care acordă următoarele servicii medicale: ginecologie, pediatrie, chirurgie, ortopedie, vertebrologie, servicii de laborator,
                                 radiologie etc.
                             </p>
-                            <div class="specialisti-item__contacts">
+                            <div class="articles-item__contacts">
                                 <address class="contacts-address">
                                         <span class="icon-location"></span>
                                         <strong>Adresa: </strong>
@@ -189,7 +189,7 @@
                                     <span class="icon-facebook"></span> Pagina de Facebook
                                 </a>
                             </div>
-                            <a href="#" class="specialisti-item__view btn-accent">Vezi servicii</a>
+                            <a href="#" class="articles-item__view btn-accent">Vezi servicii</a>
                         </div>
                     </div>
                 </div>
