--- a/#src/specialisti.html
+++ b/#src/specialisti.html
@@ -49,16 +49,16 @@
 
         <div class="specialisti">
             <div class="container">
-                <div class="specialisti-body">
-                    <div class="specialisti-body__item">
+                <div class="specialisti-body articles">
+                    <div class="articles-body__item">
                         <img src="img/place1.jpg" alt="Spitalul Internaţional „Medpark">
-                        <div class="specialisti-item__content">
+                        <div class="articles-item__content">
                             <h6>Spitalul Internaţional „Medpark</h6>
                             <p>
                                 este primul şi cel mai mare spital multidisciplinar privat din ţară. În cadrul instituției au fost dezvoltate 4 centre de excelenţă care acordă următoarele servicii medicale: ginecologie, pediatrie, chirurgie, ortopedie, vertebrologie, servicii de laborator,
                                 radiologie etc.
                             </p>
-                            <div class="specialisti-item__contacts">
+                            <div class="articles-item__contacts">
                                 <address class="contacts-address">
                                         <span class="icon-location"></span>
                                         <strong>Adresa: </strong>
@@ -72,19 +72,19 @@
                                     <span class="icon-facebook"></span> Pagina de Facebook
                                 </a>
                             </div>
-                            <a href="specialisti-single.html" class="specialisti-item__view btn-accent">Vezi servicii</a>
+                            <a href="specialisti-single.html" class="articles-item__view btn-accent">Vezi servicii</a>
                         </div>
                     </div>
 
-                    <div class="specialisti-body__item">
+                    <div class="articles-body__item">
                         <img src="img/place2.jpg" alt="Spitalul Internaţional „Medpark">
-                        <div class="specialisti-item__content">
+                        <div class="articles-item__content">
                             <h6>Spitalul Internaţional „Medpark</h6>
                             <p>
                                 este primul şi cel mai mare spital multidisciplinar privat din ţară. În cadrul instituției au fost dezvoltate 4 centre de excelenţă care acordă următoarele servicii medicale: ginecologie, pediatrie, chirurgie, ortopedie, vertebrologie, servicii de laborator,
                                 radiologie etc.
                             </p>
-                            <div class="specialisti-item__contacts">
+                            <div class="articles-item__contacts">
                                 <address class="contacts-address">
                                         <span class="icon-location"></span>
                                         <strong>Adresa: </strong>
@@ -98,19 +98,19 @@
                                     <span class="icon-facebook"></span> Pagina de Facebook
                                 </a>
                             </div>
-                            <a href="#" class="specialisti-item__view btn-accent">Vezi servicii</a>
+                            <a href="#" class="articles-item__view btn-accent">Vezi servicii</a>
                         </div>
                     </div>
 
-                    <div class="specialisti-body__item">
+                    <div class="articles-body__item">
                         <img src="img/place3.jpg" alt="Spitalul Internaţional „Medpark">
-                        <div class="specialisti-item__content">
+                        <div class="articles-item__content">
                             <h6>Spitalul Internaţional „Medpark</h6>
                             <p>
                                 este primul şi cel mai mare spital multidisciplinar privat din ţară. În cadrul instituției au fost dezvoltate 4 centre de excelenţă care acordă următoarele servicii medicale: ginecologie, pediatrie, chirurgie, ortopedie, vertebrologie, servicii de laborator,
                                 radiologie etc.
                             </p>
-                            <div class="specialisti-item__contacts">
+                            <div class="articles-item__contacts">
                                 <address class="contacts-address">
                                         <span class="icon-location"></span>
                                         <strong>Adresa: </strong>
@@ -124,19 +124,19 @@
                                     <span class="icon-facebook"></span> Pagina de Facebook
                                 </a>
                             </div>
-                            <a href="#" class="specialisti-item__view btn-accent">Vezi servicii</a>
+                            <a href="#" class="articles-item__view btn-accent">Vezi servicii</a>
                         </div>
                     </div>
 
-                    <div class="specialisti-body__item">
+                    <div class="articles-body__item">
                         <img src="img/place4.jpg" alt="Spitalul Internaţional „Medpark">
-                        <div class="specialisti-item__content">
+                        <div class="articles-item__content">
                             <h6>Spitalul Internaţional „Medpark</h6>
                             <p>
                                 este primul şi cel mai mare spital multidisciplinar privat din ţară. În cadrul instituției au fost dezvoltate 4 centre de excelenţă care acordă următoarele servicii medicale: ginecologie, pediatrie, chirurgie, ortopedie, vertebrologie, servicii de laborator,
                                 radiologie etc.
                             </p>
-                            <div class="specialisti-item__contacts">
+                            <div class="articles-item__contacts">
                                 <address class="contacts-address">
                                         <span class="icon-location"></span>
                                         <strong>Adresa: </strong>
@@ -150,7 +150,7 @@
                                     <span class="icon-facebook"></span> Pagina de Facebook
                                 </a>
                             </div>
-                            <a href="#" class="specialisti-item__view btn-accent">Vezi servicii</a>
+                            <a href="#" class="articles-item__view btn-accent">Vezi servicii</a>
                         </div>
                     </div>
                 </div>
