--- a/Qubo/stari-single.html
+++ b/Qubo/stari-single.html
@@ -38,10 +38,10 @@
                     <a href="../specialisti.html" class="header-navbar__link">Specialiști</a>
                 </li>
                 <li class="header-navbar__item">
-                    <a href="#" class="header-navbar__link">Istorii</a>
+                    <a href="../story.html" class="header-navbar__link">Istorii</a>
                 </li>
                 <li class="header-navbar__item">
-                    <a href="#" class="header-navbar__link">Resurse</a>
+                    <a href="../resources.html" class="header-navbar__link">Resurse</a>
                 </li>
             </ul>
         </nav>
