--- a/Qubo/recomandation.html
+++ b/Qubo/recomandation.html
@@ -64,7 +64,7 @@
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequatLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
                         </p>
-                        <a href="#" class="btn-accent">Citeste mai mult</a>
+                        <a href="stari-single.html" class="btn-accent">Citeste mai mult</a>
                     </div>
                 </div>
 
