--- a/Qubo/specialisti.html
+++ b/Qubo/specialisti.html
@@ -137,7 +137,7 @@
                                     <span class="icon-facebook"></span> Pagina de Facebook
                                 </a>
                             </div>
-                            <a href="#" class="articles-item__view btn-accent">Vezi servicii</a>
+                            <a href="specialisti-single.html" class="articles-item__view btn-accent">Vezi servicii</a>
                         </div>
                     </div>
 
@@ -163,7 +163,7 @@
                                     <span class="icon-facebook"></span> Pagina de Facebook
                                 </a>
                             </div>
-                            <a href="#" class="articles-item__view btn-accent">Vezi servicii</a>
+                            <a href="specialisti-single.html" class="articles-item__view btn-accent">Vezi servicii</a>
                         </div>
                     </div>
 
@@ -189,7 +189,7 @@
                                     <span class="icon-facebook"></span> Pagina de Facebook
                                 </a>
                             </div>
-                            <a href="#" class="articles-item__view btn-accent">Vezi servicii</a>
+                            <a href="specialisti-single.html" class="articles-item__view btn-accent">Vezi servicii</a>
                         </div>
                     </div>
                 </div>
