--- a/Qubo/stari-single.html
+++ b/Qubo/stari-single.html
@@ -97,32 +97,32 @@
                 <div class="slider-state__slide">
                     <img src="img/stress.svg" alt="Stres">
                     <h5>Stres</h5>
-                    <a href="#">Citeste mai mult</a>
+                    <a href="stari-single.html">Citeste mai mult</a>
                 </div>
                 <div class="slider-state__slide">
                     <img src="img/depression.svg" alt="Depresie">
                     <h5>Depresie</h5>
-                    <a href="#">Citeste mai mult</a>
+                    <a href="stari-single.html">Citeste mai mult</a>
                 </div>
                 <div class="slider-state__slide">
                     <img src="img/anexiety.svg" alt="Anxietate">
                     <h5>Anxietate</h5>
-                    <a href="#">Citeste mai mult</a>
+                    <a href="stari-single.html">Citeste mai mult</a>
                 </div>
                 <div class="slider-state__slide">
                     <img src="img/stress.svg" alt="Stres">
                     <h5>Stres</h5>
-                    <a href="#">Citeste mai mult</a>
+                    <a href="stari-single.html">Citeste mai mult</a>
                 </div>
                 <div class="slider-state__slide">
                     <img src="img/depression.svg" alt="Depresie">
                     <h5>Depresie</h5>
-                    <a href="#">Citeste mai mult</a>
+                    <a href="stari-single.html">Citeste mai mult</a>
                 </div>
                 <div class="slider-state__slide">
                     <img src="img/anexiety.svg" alt="Anxietate">
                     <h5>Anxietate</h5>
-                    <a href="#">Citeste mai mult</a>
+                    <a href="stari-single.html">Citeste mai mult</a>
                 </div>
             </div>
 
