--- a/#src/specialisti.html
+++ b/#src/specialisti.html
@@ -98,7 +98,7 @@
                                     <span class="icon-facebook"></span> Pagina de Facebook
                                 </a>
                             </div>
-                            <a href="#" class="articles-item__view btn-accent">Vezi servicii</a>
+                            <a href="specialisti-single.html" class="articles-item__view btn-accent">Vezi servicii</a>
                         </div>
                     </div>
 
@@ -124,7 +124,7 @@
                                     <span class="icon-facebook"></span> Pagina de Facebook
                                 </a>
                             </div>
-                            <a href="#" class="articles-item__view btn-accent">Vezi servicii</a>
+                            <a href="specialisti-single.html" class="articles-item__view btn-accent">Vezi servicii</a>
                         </div>
                     </div>
 
@@ -150,7 +150,7 @@
                                     <span class="icon-facebook"></span> Pagina de Facebook
                                 </a>
                             </div>
-                            <a href="#" class="articles-item__view btn-accent">Vezi servicii</a>
+                            <a href="specialisti-single.html" class="articles-item__view btn-accent">Vezi servicii</a>
                         </div>
                     </div>
                 </div>
