--- a/Qubo/index.html
+++ b/Qubo/index.html
@@ -116,32 +116,32 @@
                 <div class="slider-state__slide">
                     <img src="img/stress.svg" alt="Stres">
                     <h5>Stres</h5>
-                    <a href="#">Citeste mai mult</a>
+                    <a href="stari-single.html">Citeste mai mult</a>
                 </div>
                 <div class="slider-state__slide">
                     <img src="img/depression.svg" alt="Depresie">
                     <h5>Depresie</h5>
-                    <a href="#">Citeste mai mult</a>
+                    <a href="stari-single.html">Citeste mai mult</a>
                 </div>
                 <div class="slider-state__slide">
                     <img src="img/anexiety.svg" alt="Anxietate">
                     <h5>Anxietate</h5>
-                    <a href="#">Citeste mai mult</a>
+                    <a href="stari-single.html">Citeste mai mult</a>
                 </div>
                 <div class="slider-state__slide">
                     <img src="img/stress.svg" alt="Stres">
                     <h5>Stres</h5>
-                    <a href="#">Citeste mai mult</a>
+                    <a href="stari-single.html">Citeste mai mult</a>
                 </div>
                 <div class="slider-state__slide">
                     <img src="img/depression.svg" alt="Depresie">
                     <h5>Depresie</h5>
-                    <a href="#">Citeste mai mult</a>
+                    <a href="stari-single.html">Citeste mai mult</a>
                 </div>
                 <div class="slider-state__slide">
                     <img src="img/anexiety.svg" alt="Anxietate">
                     <h5>Anxietate</h5>
-                    <a href="#">Citeste mai mult</a>
+                    <a href="stari-single.html">Citeste mai mult</a>
                 </div>
             </div>
 
@@ -246,34 +246,34 @@
                             <div class="recomandation-slider__slider">
                                 <div class="slider-recomandation__body swiper">
                                     <div class="slider-recomandation__slide">
-                                        <a href="#">
+                                        <a href="recomandation.html">
                                             <img src="img/recomandari1.jpg" alt="Recomandări despre cum să interacționați mai bine cu oamenii">
                                         </a>
-                                        <a href="#">
+                                        <a href="recomandation.html">
                                             <h6>Recomandări despre cum să interacționați mai bine cu oamenii</h6>
                                         </a>
                                     </div>
                                     <div class="slider-recomandation__slide">
-                                        <a href="#">
+                                        <a href="recomandation.html">
                                             <img src="img/recomandari2.jpg" alt="Recomandări despre cum să te simți mai bine">
                                         </a>
-                                        <a href="#">
+                                        <a href="recomandation.html">
                                             <h6>Recomandări despre cum să te simți mai bine</h6>
                                         </a>
                                     </div>
                                     <div class="slider-recomandation__slide">
-                                        <a href="#">
+                                        <a href="recomandation.html">
                                             <img src="img/recomandari1.jpg" alt="Recomandări despre cum să interacționați mai bine cu oamenii">
                                         </a>
-                                        <a href="#">
+                                        <a href="recomandation.html">
                                             <h6>Recomandări despre cum să interacționați mai bine cu oamenii</h6>
                                         </a>
                                     </div>
                                     <div class="slider-recomandation__slide">
-                                        <a href="#">
+                                        <a href="recomandation.html">
                                             <img src="img/recomandari2.jpg" alt="Recomandări despre cum să te simți mai bine">
                                         </a>
-                                        <a href="#">
+                                        <a href="recomandation.html">
                                             <h6>Recomandări despre cum să te simți mai bine</h6>
                                         </a>
                                     </div>
@@ -294,7 +294,7 @@
                                                 </svg>
                                             </button>
                                     </div>
-                                    <a href="#" class="slider-recomandation-controls__more btn-outline">Vezi toate recomandarile</a>
+                                    <a href="recomandation.html" class="slider-recomandation-controls__more btn-outline">Vezi toate recomandarile</a>
                                 </div>
                             </div>
                         </div>
@@ -321,7 +321,7 @@
                         <img src="img/illustration1.svg" alt="ilustratie">
                     </div>
                     <div class="story-section__navigation">
-                        <a href="#" class="btn-outline read-more">Citeste mai mult</a>
+                        <a href="story.html" class="btn-outline read-more">Citeste mai mult</a>
                         <button class="btn-accent write-story">Spune-ne povestea ta</button>
                     </div>
                 </div>
